<resources>
    <string name="app_name">RoamIO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Enter your Name</string>
    <string name="email">Enter your Email</string>
    <string name="PhnNo">Mobile Number</string>
    <string name="OTP">Verification Code</string>
    <string name="VerifyBtn">Verify</string>
    <string name="LoginBtn">Login</string>
    <string name="Verifyhint">Enter OTP</string>
    <string name="SendOtpBtn">Send OTP</string>
    <string name="SignUpBtn">Sign Up</string>
    <string name="SignInBtn">Sign In</string>
    <string name="OrText">Or</string>
    <string name="m1">Hello World!!!!!</string>
    <string name="title_activity_signup">Signup</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Home">Home</string>
    <string name="Add">Add Blog</string>
    <string name="Profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_m1">User Name</string>
    <string name="profile_m2">User Email</string>
    <string name="profile_m3">User Mobile Number</string>
    <string name="googlesingin">Sign in with Google</string>
</resources>